--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft." />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet" />
   </head>
+
   <body>
     <header class="header-bg">
       <div class="header">
         <a href="index.html"><img src="/img/bikcraft.svg" alt="Bikcraft" /></a>
         <nav aria-label="primaria">
-          <ul class="header-menu">
+          <ul class="header-menu font-1-m cor-0">
             <li><a href="/bicicletas.html">Bicicletas</a></li>
             <li><a href="/seguros.html">Seguros</a></li>
             <li><a href="/contato.html">Contato</a></li>
@@ -23,5 +29,48 @@
         </nav>
       </div>
     </header>
+
+    <main class="intro-bg">
+      <div class="introducao container">
+        <div class="intro-conteudo">
+          <h1>Bicicletas feitas sob medida<span>.</span></h1>
+          <p>
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a class="btn" href="/bicicletas.html">Selecione a sua</a>
+        </div>
+        <div class="intro-img">
+          <img src="/img/fotos/introducao.jpg" alt="Bicicleta elétrica preta" />
+        </div>
+      </div>
+    </main>
+
+    <article class="bicicletas-lista">
+      <h2 class="font-1-xxl">escolha a sua<span>.</span></h2>
+      <ul>
+        <li>
+          <a href="/bicicletas/magic.html">
+            <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Magic Might</h3>
+            <span class="font-2-m cor-8">R$ 2499</span>
+          </a>
+        </li>
+        <li>
+          <a href="/bicicletas/nimbus.html">
+            <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Nimbus Stark</h3>
+            <span class="font-2-m cor-8">R$ 3499</span>
+          </a>
+        </li>
+        <li>
+          <a href="/bicicletas/nebula.html">
+            <img src="/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Nebula Cosmic</h3>
+            <span class="font-2-m cor-8">R$ 3999</span>
+          </a>
+        </li>
+      </ul>
+    </article>
   </body>
 </html>
