--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet" />
   </head>
 
@@ -110,6 +110,43 @@
         <div class="tecnologia-img">
           <img src="/img/fotos/tecnologia.jpg" alt="" />
         </div>
+      </div>
+    </article>
+
+    <section class="parceiros" aria-label="Nossos parceiros">
+      <h2 class="font-1-xxl cor-11">nossos parceiros<span>.</span></h2>
+      <ul>
+        <li><img src="/img/parceiros/caravan.svg" alt="Caravan" /></li>
+        <li><img src="/img/parceiros/dogs.svg" alt="Dosg" /></li>
+        <li><img src="/img/parceiros/flexblog.svg" alt="Flexbox" /></li>
+        <li><img src="/img/parceiros/handel.svg" alt="Handel" /></li>
+        <li><img src="/img/parceiros/lescone.svg" alt="Lescone" /></li>
+        <li><img src="/img/parceiros/ranek.svg" alt="Ranek" /></li>
+        <li><img src="/img/parceiros/surfbot.svg" alt="Surfbot" /></li>
+        <li><img src="/img/parceiros/wildbeast.svg" alt="Wildbeast" /></li>
+      </ul>
+    </section>
+    <section class="depoimento" aria-label="Depoimento">
+      <div>
+        <img
+          src="/img/fotos/depoimento.jpg"
+          alt="Pessoa pedalando uma bicicleta Bikcraft" />
+      </div>
+      <div class="depoimento-conteudo">
+        <blockquote>
+          <p class="font-1-xl cor-p5">
+            Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez
+            foi intensificar o meu amor por esta atividade. Recomendo à todos
+            que amo.
+          </p>
+        </blockquote>
+        <span class="font-1-m-b cor-p4">Ana Júlia</span>
+      </div>
+    </section>
+
+    <article class="seguros-bg">
+      <div class="seguros container">
+        <h2>seguros<span>.</span></h2>
       </div>
     </article>
   </body>
