--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <ul>
         <li><img src="/img/parceiros/caravan.svg" alt="Caravan" /></li>
         <li><img src="/img/parceiros/dogs.svg" alt="Dosg" /></li>
-        <li><img src="/img/parceiros/flexblog.svg" alt="Flexbox" /></li>
+        <li><img src="/img/parceiros/flexblog.svg" alt="Flexbog" /></li>
         <li><img src="/img/parceiros/handel.svg" alt="Handel" /></li>
         <li><img src="/img/parceiros/lescone.svg" alt="Lescone" /></li>
         <li><img src="/img/parceiros/ranek.svg" alt="Ranek" /></li>
@@ -146,7 +146,36 @@
 
     <article class="seguros-bg">
       <div class="seguros container">
-        <h2>seguros<span>.</span></h2>
+        <h2 class="font-1-xxl cor-0">seguros<span>.</span></h2>
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-6">PRATA</h3>
+          <span class="font-1-xl cor-0"
+            >R$ 199 <span class="font-1-xs cor-6">mensal</span></span
+          >
+          <ul class="font-2-m cor-0">
+            <li>Duas trocas por ano</li>
+            <li>Assistência técnica</li>
+            <li>Suporte 08h às 18h</li>
+            <li>Cobertura estadual</li>
+          </ul>
+          <a href="/orcamento.html" class="btn secundario">Inscreva-se</a>
+        </div>
+
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-6">PRATA</h3>
+          <span class="font-1-xl cor-0"
+            >R$ 199 <span class="font-1-xs cor-6">mensal</span></span
+          >
+          <ul class="font-2-m cor-0">
+            <li>Cinco trocas por ano</li>
+            <li>Assistência técnica especial</li>
+            <li>Suporte 24h</li>
+            <li>Cobertura nacional</li>
+            <li>Descontos em parceiros</li>
+            <li>Acesso ao clube Bikcraft</li>
+          </ul>
+          <a href="/orcamento.html" class="btn">Inscreva-se</a>
+        </div>
       </div>
     </article>
   </body>
