--- a/termos.html
+++ b/termos.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
       <a href="./">
