--- a/bicicletas.html
+++ b/bicicletas.html
@@ -18,7 +18,7 @@
   <body id="bicicletas">
     <header class="header-bg">
       <div class="header container">
-        <a href="./">
+        <a href="/index.html">
           <img src="./img/bikcraft.svg" alt="Bikcraft" />
         </a>
 
@@ -47,7 +47,7 @@
           <img src="/img/bicicletas/nimbus.jpg" alt="Bicicletas Nimbus Stark" />
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
-        <div class="bicicleta-conteudo">
+        <div class="bicicletas-conteudo">
           <h2 class="font-1-xl">Nimbus Stark</h2>
           <p class="font-2-s cor-8">
             A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
@@ -83,7 +83,7 @@
               alt="Bicicleta Nebula Cosmic" />
             <span class="font-2-m cor-0">R$ 4999</span>
           </div>
-          <div class="bicicleta-conteudo">
+          <div class="bicicletas-conteudo">
             <h2 class="font-1-xl cor-1">Nebula Cosmic</h2>
             <p class="font-2-s cor-5">
               A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe.
