--- a/termos.html
+++ b/termos.html
@@ -7,7 +7,6 @@
     <title>Termos e Condições | Bikcraft</title>
     <meta name="description" content="Termos e condições." />
 
-    <
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +15,7 @@
       rel="stylesheet" />
   </head>
 
-  <body id="bicicletas">
+  <body id="termos">
     <header class="header-bg">
       <div class="header container">
         <a href="/index.html">
@@ -43,40 +42,42 @@
         </div>
       </div>
 
-      <div class="termos font-2-s cor-10 container">
-        <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-        <p>
-          1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito.
-          Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
-          pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-          à vista também aceitamos PIX e Boleto.
-        </p>
-        <p>
-          1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito.
-          Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
-          pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-          à vista também aceitamos PIX e Boleto.
-        </p>
-        <p>
-          1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito.
-          Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
-          pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-          à vista também aceitamos PIX e Boleto.
-        </p>
-        <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-        <p>
-          2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito.
-          Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
-          pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-          à vista também aceitamos PIX e Boleto.
-        </p>
-        <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
-        <p>
-          3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito.
-          Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
-          pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-          à vista também aceitamos PIX e Boleto.
-        </p>
+      <div class="container">
+        <div class="termos font-2-s cor-10">
+          <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
+          <p>
+            1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito.
+            Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
+            pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitamos PIX e Boleto.
+          </p>
+          <p>
+            1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito.
+            Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
+            pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitamos PIX e Boleto.
+          </p>
+          <p>
+            1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito.
+            Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
+            pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitamos PIX e Boleto.
+          </p>
+          <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
+          <p>
+            2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito.
+            Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
+            pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitamos PIX e Boleto.
+          </p>
+          <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
+          <p>
+            3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito.
+            Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos
+            pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitamos PIX e Boleto.
+          </p>
+        </div>
       </div>
     </main>
 
